--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 	<title>The-Batman</title>
     <link rel="icon" href="Imagenes/icon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <header>
+        <div id="fondo2">
+            <h1 style="color: white;">'The Batman': la misteriosa escena post-créditos de la película de Matt Reeves esconde un nuevo enigma para los fans</h1>
+          </div>
+        
+    </header>
 </head>
 <body>
+   
+      <div id="letrayimagenes">
     <h1>The Batman</h1>
     "'<span style="color: red">The Batman</span>', la nueva película de Matt Reeves ofrece una versión nueva y más oscura del icónico superhéroe de DC en la que Robert Pattinson hace de un aún joven Bruce Wayne que ayuda a Jim Gordon (Jeffrey Wright) a resolver una serie de asesinatos en Ciudad Gótica a través de muchos acertijos para resolver el plan de Enigma, pero ¿Tiene escena post créditos la película?"
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/fWQrd6cwJ0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -20,5 +28,6 @@
     <p>Lo divertido es que si vamos a la web <a href="https://www.rataalada.com" style="color:red;">https://www.rataalada.com</a> nos encontramos con el chat que se encuentra Batman, y nos propone unos cuantos acertijos. La web es también una broma interna de la película puesto que la pista de "el rata alada" es uno de los momentos más divertidos de la película, casi una broma de traductores con la que El pingüino se ríe de Gordon y Batman.<p>
     <img src="Imagenes\img_3.jpeg" alt="imagen3">
     <p>La web tiene varios acertijos que nos pregunta un misterioso personaje que se supone que es el villano de la película, pero sus preguntas son bastante complejas y resolverlas no es tan fácil como parece, y si fallas te intenta poner nervioso, hasta que decide darte una nueva oportunidad y plantea nuevas preguntas.</p>
+</div>
 </body>
 </html>
