--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <header id="fondo2">
         <div>
-            <h1 style="color: white;">'The Batman': la misteriosa escena post-créditos de la película de Matt Reeves esconde un nuevo enigma para los fans</h1>
+            <h1 classstyle="color: white;">'The Batman': la misteriosa escena post-créditos de la película de Matt Reeves esconde un nuevo enigma para los fans</h1>
           </div>    
     </header>
 </head>
 <body>
    
 <div id="contenedor">
-    <h1>The Batman</h1>
+    <h2>The Batman</h2>
     "'<span style="color: red">The Batman</span>', la nueva película de Matt Reeves ofrece una versión nueva y más oscura del icónico superhéroe de DC en la que Robert Pattinson hace de un aún joven Bruce Wayne que ayuda a Jim Gordon (Jeffrey Wright) a resolver una serie de asesinatos en Ciudad Gótica a través de muchos acertijos para resolver el plan de Enigma, pero ¿Tiene escena post créditos la película?"
     <iframe width="100%" height="315" src="https://www.youtube.com/embed/fWQrd6cwJ0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h2>Una escena post-créditos relativa</h2>
